<resources>
    <string name="app_name">alioulio</string>

    <!-- 권한제공 동의팝업 -->
    <string name="dialog_access_denied_title">접근권한 제공 동의</string>
    <string name="dialog_access_denied_content">알리오울리오는\n카카오 소셜 계정 로그인으로\n카톡에 저장된 친구들에게, 쉽게\n알람을 만들어 보낼 수 있어요.\n\n알람메시지 녹음을 위해,\n마이크 접근을 허용해 주세요!</string>

    <string name="agree">동의</string>
    <string name="not_agree">비동의</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="next">다음</string>

    <string name="notice">안내</string>

    <string name="notice_exit">앱을 종료하시겠습니까?</string>

    <!-- 최초가입_약관동의 -->
    <string name="info_agree">먼저, 이용약관에\n동의해주세요.</string>
    <string name="social_login">소셜 로그인</string>
    <string name="info_social_login">[필수] 카카오 개인정보 제3자 제공 동의</string>

    <string name="service">서비스 이용</string>
    <string name="info_service">[필수] 서비스 이용약관 동의</string>
    <string name="info_personal_service">[필수] 개인정보 수집 및 이용 동의</string>

    <string name="join_age">가입자 연령</string>
    <string name="info_join_age">[필수] 만 14세 이상입니다.</string>

    <string name="info_check_agree">나는 연령정보를 사실대로 기재하였으며,\n약관의 모든 내용을 확인하고 이에 동의합니다.</string>
    <string name="info_check">동의하고 계속하기</string>

    <string name="error_auto_login">자동 로그인이 실패했습니다. 다시 로그인 해주세요.</string>
    <!-- 카카오 API Network Response Message -->
    <string name="token_info_error">토큰 정보 보기 실패</string>
    <string name="token_info_success">토큰 정보 보기 성공</string>

    <string name="access_denied">접근이 거부됨(동의 취소)</string>
    <string name="invalid_client">유효하지 않은 앱</string>

    <string name="invalid_grant">인증 수단이 유효하지 않아 인증할 수 없는 상태</string>
    <string name="invalid_request">요청 파라미터 오류</string>
    <string name="invalid_scope">유효하지 않은 scope ID</string>
    <string name="mis_configured">설정이 올바르지 않음(android key hash error)"</string>
    <string name="server_error">서버 내부 에러</string>
    <string name="unauthorized">앱이 요청 권한이 없음</string>
    <string name="etc_error">기타 에러</string>

    <string name="success_login">로그인에 성공하였습니다.</string>

    <string name="error_logout">로그아웃 실패</string>
    <string name="success_logout">로그아웃 성공</string>

    <string name="error_leave">회원 탈퇴 실패</string>
    <string name="success_leave">회원 탈퇴 성공</string>

    <string name="recored_player_title">녹음된 알림 미리듣기</string>
    <string name="recored_player_desc">마음에 들지 않으면, 다시 녹음해보세요.</string>


    <string name="material_calendar_monday">월</string>
    <string name="material_calendar_tuesday">화</string>
    <string name="material_calendar_wednesday">수</string>
    <string name="material_calendar_thursday">목</string>
    <string name="material_calendar_friday">금</string>
    <string name="material_calendar_saturday">토</string>
    <string name="material_calendar_sunday">일</string>

    <array name="material_calendar_day_abbreviations_array">
        <item>@string/material_calendar_sunday</item>
        <item>@string/material_calendar_monday</item>
        <item>@string/material_calendar_tuesday</item>
        <item>@string/material_calendar_wednesday</item>
        <item>@string/material_calendar_thursday</item>
        <item>@string/material_calendar_friday</item>
        <item>@string/material_calendar_saturday</item>
    </array>

    <array name="material_calendar_months_array">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>