<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.alio.ulio.view.ui.sign.FirstSignAgreeViewModel" />
        <variable
            name="activity"
            type="com.alio.ulio.view.ui.sign.FirstSignAgreeActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        tools:context=".view.ui.sign.FirstSignAgreeActivity">

        <TextView
            android:id="@+id/text_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="25dp"
            android:text="@string/info_agree"
            android:textColor="@color/black_222222"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_social_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_agree"
            android:layout_marginTop="36dp"
            android:textStyle="bold"
            android:textColor="@color/black_3d3d3d"
            android:text="@string/social_login"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/layout_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_social_login"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_social"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:button="@drawable/ic_comp_chkbox"
                android:checked="@{viewmodel.kakaoCheck}"
                android:onCheckedChanged="@{viewmodel::onKakaoInfoChanged}"/>

            <TextView
                android:id="@+id/text_social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/check_social"
                android:text="@string/info_social_login"
                android:textColor="@color/gray_666666"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:id="@+id/view_social"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/layout_social"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/gray_F0F0F0"/>

        <TextView
            android:id="@+id/text_social_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_social"
            android:text="@string/service"
            android:textColor="@color/black_3d3d3d"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layout_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_social_1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_service"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:button="@drawable/ic_comp_chkbox"
                android:checked="@{viewmodel.serviceCheck}"
                android:onCheckedChanged="@{viewmodel::onServiceChanged}"/>

            <TextView
                android:id="@+id/text_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/check_service"
                android:text="@string/info_service"
                android:textColor="@color/gray_666666"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_btn_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_personal_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/layout_service"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_personal_service"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:button="@drawable/ic_comp_chkbox"
                android:checked="@{viewmodel.personalInfoCheck}"
                android:onCheckedChanged="@{viewmodel::onPersonalChanged}"/>

            <TextView
                android:id="@+id/text_personal_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/check_personal_service"
                android:text="@string/info_personal_service"
                android:textColor="@color/gray_666666"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_personal_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_btn_right" />
        </RelativeLayout>

        <View
            android:id="@+id/view_personal_service"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/layout_personal_service"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/gray_F0F0F0"/>

        <TextView
            android:id="@+id/text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_personal_service"
            android:text="@string/join_age"
            android:textColor="@color/black_3d3d3d"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_age"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_join_age"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:button="@drawable/ic_comp_chkbox"
                android:checked="@{viewmodel.ageCheck}"
                android:onCheckedChanged="@{viewmodel::onAgeChanged}"/>

            <TextView
                android:id="@+id/text_join_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/check_join_age"
                android:text="@string/info_join_age"
                android:textColor="@color/gray_666666"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_agree"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:lineHeight="22dp"
            android:text="@string/info_check_agree"
            android:textColor="@color/gray_A3A3A3"
            android:textSize="16sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_agree"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_next_states"
            android:enabled="@{viewmodel.nextEnable}"
            android:onClick="@{() -> viewmodel.onNextEvent()}"
            android:text="@string/info_check"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>
</layout>