<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="dialog"
            type="com.alio.ulio.view.dialog.DialogAccessDeniedDialog" />
    </data>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="314dp"
        android:background="@drawable/dialog_background_round"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black_222222"
            android:textSize="16sp"
            android:text="@string/dialog_access_denied_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:lineHeight="18dp"
            android:textSize="16sp"
            android:textColor="@color/black_3d3d3d"
            android:text="@string/dialog_access_denied_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_notAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:background="@drawable/ic_btn_small_enabled_un"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/not_agree"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/ic_btn_small_enabled"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/agree"/>

            <!--<androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/dialog_button_agree"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/agree" />-->
        </LinearLayout>
    </LinearLayout>
</layout>